# geneie

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  code_8h.html  code_8h_source.html  dir_208d2690607c4e3d3fabfa1d18673d36.html  dir_56ab5e174a116d47b1e3179a9072f4a3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  encoding_8h.html  encoding_8h_source.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  large_encoding_example.html  menudata.js  pages.html  sequence_8h.html  sequence_8h_source.html  sequence__ref_8h.html  sequence__ref_8h_source.html  sequence__tools_8h.html  sequence__tools_8h_source.html  simple_example.html  splice_simple.html  structgeneie__sequence.html  structgeneie__sequence__ref.html  structgeneie__sequence__tools__ref__pair.html
pages/: CMakeLists.txt  clean_whitespace.c  codon_encoder.c  large_encoding_example.md  large_file_encoding.c  mainpage.md  simple.c  simple_example.md  splice_simple.md
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
src/: CMakeLists.txt  code.c  encoding.c  geneie.h  sequence.c  sequence_ref.c  sequence_tools.c
src/geneie/: code.h  encoding.h  sequence.h  sequence_ref.h  sequence_tools.h
tests/: CMakeLists.txt  geneie_code.c  geneie_encoding.c  geneie_sequence.c  geneie_sequence_ref.c  (+2 more)
(+1 files in other folders)
